<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".RiskManagementResults">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider24"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4" />

    <TextView
        android:id="@+id/acctName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/default_name"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/toolbar4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/riskMBalanceTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="24dp"
        android:text="@string/balance"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/toolbar4"
        app:layout_constraintTop_toTopOf="@+id/toolbar4" />

    <TextView
        android:id="@+id/riskMResultsBalanceTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/dollar"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/toolbar4"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/companyTicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="140dp"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="93dp"
                android:layout_marginEnd="138dp"
                android:layout_marginRight="140dp"
                android:text="@string/ticker_symbol"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="131dp">

                <TextView
                    android:id="@+id/riskRewardLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/risk_reward"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/riskRewardRatioResults"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-143dp"
                    android:layout_marginLeft="-143dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/rr_ratio"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/atrResultsLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-25dp"
                    android:layout_marginLeft="-25dp"
                    android:layout_marginTop="95dp"
                    android:text="@string/avg_true_range"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/atrResults"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-53dp"
                    android:layout_marginLeft="-53dp"
                    android:layout_marginTop="125dp"
                    android:text="@string/dollar"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/riskUnitLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-35dp"
                    android:layout_marginLeft="-35dp"
                    android:layout_marginTop="170dp"
                    android:text="@string/risk_unit"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/riskUnitResults"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-89dp"
                    android:layout_marginLeft="-89dp"
                    android:layout_marginTop="200dp"
                    android:text="@string/dollar"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="200dp"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="131dp"
                android:layout_marginEnd="11dp"
                android:layout_marginRight="11dp">

                <TextView
                    android:id="@+id/absStopLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/ab_stop"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/abStopResults"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-126dp"
                    android:layout_marginLeft="-126dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/dollar"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/riskPosSizeLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-35dp"
                    android:layout_marginLeft="-35dp"
                    android:layout_marginTop="95dp"
                    android:text="@string/risk_pos_size"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/riskPosSizeResults"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-140dp"
                    android:layout_marginLeft="-140dp"
                    android:layout_marginTop="125dp"
                    android:text="@string/position"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/posValueLbl"
                    android:layout_width="136dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="-10dp"
                    android:layout_marginLeft="-10dp"
                    android:layout_marginTop="170dp"
                    android:text="@string/pos_value"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/posValueResults"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-136dp"
                    android:layout_marginLeft="-136dp"
                    android:layout_marginTop="200dp"
                    android:text="@string/dollar"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />
            </LinearLayout>

            <Button
                android:id="@+id/resultsHomeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="450dp"
                android:layout_marginBottom="0dp"
                android:text="@string/home" />

            <Button
                android:id="@+id/resultsSaveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="75dp"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="450dp"
                android:layout_marginEnd="80dp"
                android:layout_marginBottom="0dp"
                android:layout_toEndOf="@+id/resultsHomeBtn"
                android:text="@string/save" />

        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>