<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".AddAccount">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Edit Account"
        app:titleTextColor="@color/colorAccent" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="66dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#F8F6F6"
        app:layout_constraintEnd_toEndOf="@+id/toolbar3"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider6"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_weight=".100"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/acctNameLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/acct_name"
                android:textColor="@color/colorAccent"
                android:textSize="17sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editAcctNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/background_light"
                    android:drawableBottom="@color/colorAccent"
                    android:hint="@string/enter_a_name"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textSize="17sp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/acctValueLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/acct_value"
                android:textColor="@color/colorAccent"
                android:textSize="17sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editAcctValueInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/background_light"
                    android:hint="@string/dollar"
                    android:inputType="text|numberDecimal"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textSize="17sp" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/gainesLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/gaines"
                android:textColor="@color/colorAccent"
                android:textSize="17sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editGainesInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/background_light"
                    android:hint="@string/dollar"
                    android:inputType="text|numberDecimal"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textSize="17sp" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/editLossesLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/losses"
                android:textColor="@color/colorAccent"
                android:textSize="17sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editLossesInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/background_light"
                    android:hint="@string/dollar"
                    android:inputType="text|numberDecimal"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textSize="17sp" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/textview"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                tools:text="@string/enter_id" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/accountID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/background_light"
                    android:hint="@string/enter_account_id"
                    android:inputType="text|number"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/editAcctCancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:background="@color/design_default_color_primary_dark"
                android:text="@string/cancel"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/updateAcctBtn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="245dp"
                android:layout_marginLeft="245dp"
                android:layout_marginTop="-40dp"
                android:background="@color/design_default_color_primary_dark"
                android:text="@string/update"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/previousBtn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:background="@color/design_default_color_primary_dark"
                android:text="@string/previous_button"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/nextBtn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="245dp"
                android:layout_marginLeft="245dp"
                android:layout_marginTop="-40dp"
                android:background="@color/design_default_color_primary_dark"
                android:text="@string/next_button"
                android:textColor="@android:color/background_light" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>